--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,6 +1,7 @@
 <html>
   <head>
 	<title>Ploaf's Experimental 11ty Site</title>
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
 
   <body>
@@ -8,6 +9,17 @@
 	    But whatever it is, it's going to be in my experimental film!
 	</h1>
 	{{ content | safe }}
+	<script>
+		if (window.netlifyIdentity) {
+		  window.netlifyIdentity.on("init", user => {
+			if (!user) {
+			  window.netlifyIdentity.on("login", () => {
+				document.location.href = "/admin/";
+			  });
+			}
+		  });
+		}
+	  </script>
   </body>
 
 </html>
