--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,15 +1,23 @@
 <html lang="en">
   <head>
 	<title>Ploaf's Experimental 11ty Site</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	<link rel="stylesheet" href="/css/main.css">
   </head>
 
   <body>
 	<header>
 		<h1>
-	    	But whatever it is, it's going to be in my experimental film!
+	    	Ploafmaster General
 		</h1>
 	</header>
+	<nav>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/posts">Blog</a></li>
+		</ul>
+	</nav>
 	<main>
 		{{ content | safe }}
 	</main>
